--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "mongoose": "^5.2.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
