--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ajv-keywords": "^3.2.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.2",
     "react": "^16.4.1",
