--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./http://myname.github.io/myapp",
+  "start_url": "Recipe.js",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
