--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "foodapp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://myname.github.io/myapp",
+  "homepage": "zany-houses.surge.sh",
   "dependencies": {
     "ajv": "^6.5.2",
     "ajv-keywords": "^3.2.0",
